# badge_sim-AP4A

./: .gitattributes  CMakeLists.txt  README.md  main.cpp
config/: permissions.csv
include/: AdministrativeBadge.h  AdministrativeStaff.h  Badge.h  BadgeReader.h  BuildingReader.h  EquipementReader.h  Person.h  RoomReader.h  Scheduler.h  SecurityBadge.h  SecurityStaff.h  Server.h  Student.h  StudentBadge.h  Teacher.h  TeacherBadge.h  utils.h
src/: AdministrativeBadge.cpp  AdministrativeStaff.cpp  Badge.cpp  BadgeReader.cpp  BuildingReader.cpp  Person.cpp  RoomReader.cpp  Scheduler.cpp  SecurityBadge.cpp  SecurityStaff.cpp  Server.cpp  Student.cpp  StudentBadge.cpp  Teacher.cpp  TeacherBadge.cpp  utils.cpp
